--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Snippet Cheatsheet</title>
-    <link rel="stylesheet" href="C:\Users\User\Desktop\module2demo\assets\module2.css">
+    <link rel="stylesheet" href="./assets/module2.css">
 
 <body>
     <header>
